# AgentArmy

./: .gitignore  README.md  cli.py  config.yaml  config_oboc.yaml  mcp_server.py  mcp_server_oboc.py  pyproject.toml  requirements.txt  run.sh
.github/: copilot-instructions.md
agent_army/: __init__.py  config.py  orchestrator.py  state.py
agent_army/agents/: __init__.py  analysis.py  base.py  implementation.py  planner.py  research.py  testing.py
agent_army/oboc/: __init__.py  knowledge.py  memory.py  oboc_orchestrator.py  observability.py  orchestration.py  resilience.py  tiers.py
tests/: __init__.py  test_oboc.py  test_orchestrator.py
